--- a/em-probit.Rmd
+++ b/em-probit.Rmd
@@ -16,7 +16,7 @@ admission = haven::read_dta("https://stats.idre.ucla.edu/stat/stata/dae/binary.d
 
 #### Function
 
-We'll start with the a basic maximum likelihood function for a standard probit.  See the [logistic regression][Standard Logistic] example as comparison.
+We'll start with the a basic maximum likelihood function for a standard probit.  See the [logistic regression][Standard Logistic] and [previous chapter on probit models][Probit & Bivariate Probit] for comparison.
 
 ```{r probit-mle}
 probit_mle <- function(params, X, y){
@@ -78,9 +78,6 @@ Compare.
 ```{r probit-compare-mle-glm}
 rbind(coefs_mle, coefs_glm)
 ```
-
-
-
 
 
 
