--- a/linear-regression.Rmd
+++ b/linear-regression.Rmd
@@ -13,8 +13,8 @@ Least squares loss is not confined to the standard regression setting, but is
 widely used in more predictive/'algorithmic' approaches e.g. in machine learning
 and elsewhere.
 
-## Data Setup
 
+## Data Setup
 
 ```{r lm-setup}
 library(tidyverse)
@@ -35,8 +35,8 @@ dfXy = data.frame(X, y)
 
 A maximum likelihood approach.
 
-```{r lm_ML}
-lm_ML = function(par, X, y) {
+```{r lm_ml}
+lm_ml = function(par, X, y) {
   # par: parameters to be estimated
   # X: predictor matrix with intercept column
   # y: response
@@ -65,8 +65,8 @@ lm_ML = function(par, X, y) {
 An approach via least squares loss function.
 
 
-```{r lm_LS}
-lm_LS = function(par, X, y) {
+```{r lm_ls}
+lm_ls = function(par, X, y) {
   # arguments- 
   # par: parameters to be estimated
   # X: predictor matrix with intercept column
@@ -104,7 +104,7 @@ names(init) = c('sigma2', 'intercept', 'b1', 'b2')
 
 optlmML = optim(
   par = init,
-  fn  = lm_ML,
+  fn  = lm_ml,
   X   = X,
   y   = y,
   control = list(reltol = 1e-8)
@@ -112,13 +112,13 @@ optlmML = optim(
 
 optlmLS = optim(
   par = init[-1],
-  fn  = lm_LS,
+  fn  = lm_ls,
   X   = X,
   y   = y,
   control = list(reltol = 1e-8)
 )
 
-pars_ML = optlmML$par
+pars_ml = optlmML$par
 pars_LS = c(sigma2 = optlmLS$value / (N - k - 1), optlmLS$par)  # calculate sigma2 and add
 
 ```
@@ -145,7 +145,7 @@ Example of QR.
 ```{r lm-compare}
 round(
   rbind(
-    pars_ML,
+    pars_ml,
     pars_LS,
     modlm = c(summary(modlm)$sigma^2, coef(modlm))), 
   digits = 3
@@ -178,7 +178,7 @@ Compare.
 sqrt(crossprod(y - X %*% coefs) / (N - k - 1))
 summary(modlm)$sigma
 sqrt(modglm$deviance / modglm$df.residual) 
-c(sqrt(pars_ML[1]), sqrt(pars_LS[1]))
+c(sqrt(pars_ml[1]), sqrt(pars_LS[1]))
 
 
 # rerun by adding 3-4 zeros to the N
