--- a/bayesian.Rmd
+++ b/bayesian.Rmd
@@ -3,3 +3,16 @@
 # Placeholder
 
 This part is still in progress while I decide what to keep/retain.  In the meantime, you can take a look at the [old repo](https://github.com/m-clark/Miscellaneous-R-Code/tree/master/ModelFitting/Bayesian).
+
+```{r child='bayesian-linear-regression.Rmd'}
+```
+
+```{r child='bayesian-mixed-model.Rmd'}
+```
+
+<!-- ```{r child='bayes-linear-regression.Rmd'} -->
+<!-- ``` -->
+
+<!-- ```{r child='bayes-linear-regression.Rmd'} -->
+<!-- ``` -->
+
