add bayesian multimed

--- a/bayesian.Rmd
+++ b/bayesian.Rmd
@@ -10,8 +10,8 @@ This part is still in progress while I decide what to keep/retain.  In the meant
 ```{r child='bayesian-mixed-model.Rmd'}
 ```
 
-<!-- ```{r child='bayes-linear-regression.Rmd'} -->
-<!-- ``` -->
+```{r child='bayesian-mixed-mediation.Rmd'}
+```
 
 <!-- ```{r child='bayes-linear-regression.Rmd'} -->
 <!-- ``` -->
